client/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
    version: v1
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: client-service
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
        prometheus.io/path: "/metrics"
      labels:
        app: client-service
        version: v1
    spec:
      serviceAccountName: client-serviceaccount
      containers:
        - name: client-service
          image: 083118395813.dkr.ecr.ap-south-1.amazonaws.com/client-image:${VERSION}-${BUILD_NUMBER}
          ports:
            - containerPort: 3000  # Existing port configuration
            - containerPort: 8080  # Additional port configuration
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
